--- a/atividadeRegex/style.css
+++ b/atividadeRegex/style.css
@@ -42,3 +42,15 @@ article label {
 article input {
   font-size: 2.4rem;
 }
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+body {
+  font-family: monospace;
+}
