--- a/atividadeGramaticaRegular/style.css
+++ b/atividadeGramaticaRegular/style.css
@@ -3,10 +3,10 @@
 }
 
 button {
-  height:30px;
+  height:35px;
   width:150px;
   text-align: center;
-  border-radious
+  border-radius: 30px;
 }
 
 html {
