--- a/atividadeGramaticaRegular/style.css
+++ b/atividadeGramaticaRegular/style.css
@@ -3,16 +3,10 @@
 }
 
 button {
-  height:35px;
-  width:150px;
+  height: 35px;
+  width: 150px;
   text-align: center;
-  border-radius: 30px;}
-
-.inter-<uniquifier> {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+  border-radius: 30px;
 }
 
 html {
@@ -65,8 +59,6 @@ article input {
   font-size: 2.4rem;
 }
 
-
-
 .row {
   display: flex;
   flex-direction: row;
@@ -80,7 +72,7 @@ article input {
 }
 
 .green-bg {
-  background-color: #00bb00;
+  background-color: #009900;
   color: #fff;
 }
 
@@ -102,13 +94,9 @@ ul#list {
   flex-direction: row;
   gap: 2rem;
 }
-<<<<<<< HEAD
-=======
 
 .button {
   width: 150px;
   height: 40px;
   border-radius: 10px;
-
 }
->>>>>>> 6c967fa0c0f69a4986c5307085decc21935a8776
