--- a/atividadeGramaticaRegular/style.css
+++ b/atividadeGramaticaRegular/style.css
@@ -7,6 +7,8 @@ button {
   width: 150px;
   text-align: center;
   border-radius: 30px;
+  /* border-radius: 10px; */
+  font-size: 14pt;
 }
 
 html {
@@ -93,10 +95,4 @@ ul#list {
   display: flex;
   flex-direction: row;
   gap: 2rem;
-}
-
-.button {
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
 }
