--- a/atividadeGramaticaRegular/style.css
+++ b/atividadeGramaticaRegular/style.css
@@ -1,26 +1,8 @@
-.container {
-  display: flex;
-}
-
-button {
-  height: 35px;
-  width: 150px;
-  text-align: center;
-  border-radius: 30px;
-  /* border-radius: 10px; */
-  font-size: 14pt;
-}
-
-html {
-  font-size: 62.5%;
-}
-
 body {
   font-family: monospace;
   margin-top: 1.6rem;
   display: flex;
   flex-direction: column;
-  gap: 10vh;
 }
 
 header {
@@ -28,71 +10,90 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 8rem;
-  gap: 2rem;
+  margin-bottom: 5%;
+  row-gap: 10px;
 }
 
 header h1 {
-  font-size: 4.8rem;
+  font-size: 20pt;
+  text-align: center;
 }
 
 header h2 {
-  font-size: 2.4rem;
+  text-align: center;
+  font-size: 14pt;
 }
 
-header h3 {
-  font-size: 2rem;
+label{
+  font-weight: bold;
+  font-size: 14pt;
 }
 
-article {
+h1{
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+h3{
+  font-size: 14pt;
+  font-weight: bold;
+  text-align: center;
+}
+
+input{
+  height: 20px;
+}
+
+button {
+  width: 150px;
+  height: 40px;
+  border-radius: 30px;
+  font-size: 12pt;
+} 
+
+
+.title{
+  font-weight: bold;
+  font-size: 20pt;
+  text-align: center;
+}
+
+.name{
+  font-size: 16pt;
+  text-align: center;
+  
+}
+
+.rule{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  column-gap: 10px;
+  flex-flow: wrap;
   justify-content: center;
-  font-size: 3.2rem;
-  gap: 2rem;
 }
 
-article label {
-  margin: 1.6rem 0;
-}
-
-article input {
-  font-size: 2.4rem;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  align-items: end;
-  gap: 1rem;
-}
-
-.error {
-  background-color: #bb1212;
-  color: #fff;
-}
-
-.green-bg {
-  background-color: #009900;
-  color: #fff;
-}
-
-section#rules {
+.container{
   display: flex;
   flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  row-gap: 15px;
   align-items: center;
-  gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-ul#list {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
 
-.rule {
+.content{
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  align-items: center;
+  text-align: center;
+  font-size: 13pt;
+  column-gap: 10px;
+  row-gap: 15px;
+  flex-flow: wrap;
+  justify-content: center;
 }
+
