--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   margin: 0;
 }
@@ -19,17 +19,17 @@ button {
 }
 
 .centered-div {
-  margin: 10px 0; /* Add space between the links */
+  margin: 10px 0;
 }
 
 a {
   text-decoration: none;
   font-size: 20px;
-  color: #333; /* Customize link color */
+  color: #333;
 }
 
 a:hover {
-  color: #007bff; /* Customize hover effect */
+  color: #007bff; 
 }
 
 h1 {
@@ -42,4 +42,77 @@ h2 {
 
 body {
   font-family: monospace;
+} */
+
+/* html {
+  font-size: 62.5%;
 }
+*/
+body {
+  font-family: monospace;
+  margin-top: 1.6rem;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 2%;
+}
+
+/* header h1 {
+  font-size: 20pt;
+  text-align: center;
+}
+
+header h2 {
+  text-align: center;
+  font-size: 14pt;
+} */
+.title{
+  font-weight: bold;
+  font-size: 20pt;
+  text-align: center;
+}
+
+.name{
+  font-size: 16pt;
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+label{
+  font-weight: bold;
+  font-size: 14pt;
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+  column-gap: 50px;
+  row-gap: 50px;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 13pt;
+  row-gap: 15px;
+}
+
+.button {
+  width: 150px;
+  height: 45px;
+  border-radius: 30px;
+  font-size: 12pt;
+} 
