--- a/atividadeRegex/style.css
+++ b/atividadeRegex/style.css
@@ -29,7 +29,7 @@ header h2 {
 
 article {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: 3.2rem;
