--- a/atividadeMaquinaTuring/style.css
+++ b/atividadeMaquinaTuring/style.css
@@ -110,25 +110,19 @@ ul#list {
   border-radius: 10px;
 }
 
-#canvasAndResults {
-  display: flex;
-  flex-direction: column;
-  margin: 2rem auto;
-  gap: 2rem;
-}
-
 #myDiagramDiv {
   position: relative;
-  height: 40vh;
+  height: 50rem;
   width: 80vw;
   border: dashed 1px red;
+  margin: 0 auto;
 }
 
 #finalStatesSelect {
   width: 96px;
 }
 
-#automataReadingSettingsDiv {
+#turingReadingSettingsDiv {
   display: flex;
   flex-direction: row;
   align-items: end;
@@ -152,8 +146,8 @@ ul#list {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
@@ -162,4 +156,10 @@ ul#list {
   margin: 0 auto;
   background-color: #fefefe;
   padding: 4rem;
+}
+
+#configurations {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
